[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlt"
version = "0.0.1"
description = "eXtremely Lean LLM Trainer"
authors = [
    { name = "Yi Wang", email = "yi.wang.2005@gmail.com" }
]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "jax",
    "orbax",
    "optax",
    "transformers",
    "datasets",
]
[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = true
